// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentStyle must match the diff snapshot between Button vs Selected Button Tag 1`] = `
Snapshot Diff:
- First value
+ Second value

  <TagStyle
    as="TagButtonStyle"
-   className=""
+   className="selected"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Hello",
        }
      }
    />
+   <TagIconStyle>
+     <SvgClose />
+   </TagIconStyle>
  </TagStyle>
`;

exports[`ComponentStyle must match the diff snapshot between default vs Button Tag 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  <TagStyle
-   as="TagStyle"
+   as="TagButtonStyle"
    className=""
  >
    <span
      dangerouslySetInnerHTML={
        Object {
`;

exports[`ComponentStyle snapshot by default 1`] = `
<TagStyle
  as="TagStyle"
  className=""
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "Hello",
      }
    }
  />
</TagStyle>
`;
